add a soc.icons+toplinks in header

--- a/index.html
+++ b/index.html
@@ -22,6 +22,30 @@
 	<link rel="stylesheet" href="css/media.css" />
 </head>
 <body>
+	<div class="top_header">
+		<div class="header_topline">
+			<div class="container">
+				<div class="col-md-12">
+					<div class="row">
+						<button class="auth_buttons hidden-md hidden-lg hidden-sm"><i class="fa fa-user"></i></button>
+						<div class="top-links">
+							<a href="#">Вход</a> / 
+							<a href="#">Регистрация</a>
+						</div>
+						<div class="soc_buttons">
+							<a href="#"><i class="fa fa-vk"></i></a>
+							<a href="#"><i class="fa fa-facebook-square"></i></a>
+							<a href="#"><i class="fa fa-twitter"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+
+
 	<!--[if lt IE 9]>
 	<script src="libs/html5shiv/es5-shim.min.js"></script>
 	<script src="libs/html5shiv/html5shiv.min.js"></script>
